server/src/search_executor/snapshots/navigatum_server__search_executor__test__good_queries-9.snap
---
source: server/src/search_executor/mod.rs
description: ""
expression: actual
info: "'Physik Container' should get '5140' in 1 results"
---
- facet: buildings
  entries:
    - id: "5140"
      type: building
      name: "\u0019Physik\u0017 I \u0019Container\u0017"
      subtext: Gebäude
    - id: "5124"
      type: building
      name: "WSI \u0019Container\u0017"
      subtext: Gebäude
    - id: "5131"
      type: building
      name: "FRM-Poststelle (\u0019Container\u0017)"
      subtext: Gebäude
    - id: "5160"
      type: building
      name: "UCN-Testanlage (\u0019Container\u0017)"
      subtext: Gebäude
  n_visible: 4
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: rooms
  entries:
    - id: 5140.01.201
      type: room
      name: 5140.01.201 (Tutorraum)
      subtext: "garching, Physik I Container"
      subtext_bold: C.3201@5140
    - id: 5140.01.202
      type: room
      name: 5140.01.202 (Tutorraum)
      subtext: "garching, Physik I Container"
      subtext_bold: C.3202@5140
    - id: 5140.01.203
      type: room
      name: 5140.01.203 (Tutorraum)
      subtext: "garching, Physik I Container"
      subtext_bold: C.3203@5140
    - id: 5140.01.204
      type: room
      name: 5140.01.204 (CIP-Raum)
      subtext: "garching, Physik I Container"
      subtext_bold: C.3204@5140
    - id: 5140.01.205
      type: room
      name: 5140.01.205 (CIP-Raum)
      subtext: "garching, Physik I Container"
      subtext_bold: C.3205@5140
    - id: 5140.01.206
      type: room
      name: 5140.01.206 (CIP-Raum)
      subtext: "garching, Physik I Container"
      subtext_bold: C.3206@5140
  n_visible: 6
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: sites
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: pois
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
