server/src/search_executor/snapshots/navigatum_server__search_executor__test__lecture_facet_query.snap
---
source: server/src/search_executor/mod.rs
description: lecture facet returns a bilingual hit with its next occurrence
expression: results.0
info: q=Navigatumlehre
---
- facet: lectures
  entries:
    - id: lecture_testfixture0001
      name: "Grundlagen der \u0019Navigatumlehre\u0017"
      subtext: Vorlesung
      title_de: Grundlagen der Navigatumlehre
      title_en: Foundations of Navigatum Teaching
      next_occurrence_at: "2024-10-15T08:00:00Z"
      upcoming:
        - start_at: "2024-10-15T08:00:00Z"
          end_at: "2024-10-15T10:00:00Z"
          room_code: 5606.EG.011
          room_name: Testhörsaal
        - start_at: "2024-10-22T08:00:00Z"
          end_at: "2024-10-22T10:00:00Z"
          room_code: 5606.EG.011
          room_name: Testhörsaal
  n_visible: 1
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: sites
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: rooms
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: pois
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
